2004-09-29  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: typographic cleans ups
	* Eris/Log.cpp: add the ability to send Message::Elements over log streams
	* test/commander.cpp, test/stubServer.cpp, test/controller.cpp: work to
	  support out-of-band control of the stub server from test cases
	  
2004-08-10  James Turner  <james@worldforge.org>

    * Eris/View.cpp: Make entities that are being deleted invisible first, so 
      we emit disappearance signals correctly.
    * Eris/Avatar.cpp, Eris/Avatar.h: Hook up the inventory signals

2004-08-09  Al Riddoch  <alriddoch@zepler.org>

	* Eris/BaseConnection.cpp, Eris/Log.cpp, Eris/TypeService.cpp:
	  Pass references to decoders rather than pointers to Atlas-C++.

2004-08-07  James Turner  <james@worldforge.org>

    * Eris/Avatar.cpp, Eris/Avatar.h: Change the meaning of Avatar::InGame to
      be 'in-game subscription successfull' instead of 'character entity
      apepared'. Add a new signal, bizzarely entitled 'GotCharacterEntity',
      to replicate the old behaviour of the InGame signal.

2004-08-07  James Turner  <james@worldforge.org>

    * Eris/TypeInfo.cpp: add another custom factory, for types derived from
      action. This makes sight(burn) do the right thing, which we get for
      the campfire.

    * Eris/Account.cpp: remove some debug noise
    
    * Eris/Exceptions.cpp, Eris/Exceptions.h: add a new exception type for
      dealing with malformed Atlas objects.

2004-08-05  James Turner  <james@worldforge.org>

    * Eris/Connection.cpp: make dispatchOp less noisy in some situations, 
      notably the case where a TO router doesn't handle an op.
      
    * Eris/TypeService.cpp, Eris/TypeService.h: factor out the recursive
      verification of op arguments, and handle the case where to op itself
      was built as Anonymous. In that situation, we need to extract 'args'
      as a Message::Element, and try running the ObjectFactory ourselves.

	* TODO updates
